Alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,6 @@ ul li{
     background: #F4F4F4;
 
 }
+.secta{
+    background-color: #FFFFFF;
+}
